RESOLVED FIXED196565
Leak of UniqueIDBDatabase in network process running layout tests
https://bugs.webkit.org/show_bug.cgi?id=196565
Summary Leak of UniqueIDBDatabase in network process running layout tests
Sihui Liu
Reported 2019-04-03 14:30:04 PDT
22 (3.19K) ROOT CYCLE: <WTF::Function<void ()>::CallableWrapper<std::__1::__bind<void (WebCore::IDBServer::UniqueIDBDatabase::*&)(), WebCore::IDBServer::UniqueIDBDatabase*> > 0x7f805f301280> [32] 21 (3.16K) ROOT CYCLE: 0x7f805f302800 [800] CYCLE BACK TO <WTF::Function<void ()>::CallableWrapper<std::__1::__bind<void (WebCore::IDBServer::UniqueIDBDatabase::*&)(), WebCore::IDBServer::UniqueIDBDatabase*> > 0x7f805f301280> [32] 1 (48 bytes) ROOT CYCLE: 0x7f805eb02890 [48] 1 (16 bytes) ROOT CYCLE: 0x7f805eb001c0 [16]
Attachments
Patch (3.25 KB, patch)
2019-04-03 14:51 PDT, Sihui Liu
no flags
Patch for landing (3.32 KB, patch)
2019-04-04 13:38 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2019-04-03 14:30:29 PDT
Sihui Liu
Comment 2 2019-04-03 14:51:04 PDT
Geoffrey Garen
Comment 3 2019-04-03 16:56:58 PDT
Comment on attachment 366649 [details] Patch r=me
Sihui Liu
Comment 4 2019-04-04 13:38:38 PDT
Created attachment 366749 [details] Patch for landing
WebKit Commit Bot
Comment 5 2019-04-04 13:53:27 PDT
Comment on attachment 366749 [details] Patch for landing Clearing flags on attachment: 366749 Committed r243903: <https://trac.webkit.org/changeset/243903>
WebKit Commit Bot
Comment 6 2019-04-04 13:53:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.